# perplex-cpp

./: .gitignore  CMakeLists.txt  README.md
include/perplex/: wrapper.h
include/perplexcpp/: base.h  perplexcpp.h  phase.h  result_cache.h  utils.h  wrapper.h
src/: CMakeLists.txt  base.cc  c_interface.f  c_interface.h  f2c.f  f2c.h  perplexcpp.cc  result_cache.cc  result_cache.h  utils.cc  wrapper.cc
test/: CMakeLists.txt  c_interface.cc  f2c.cc  perplexcpp.cc  result_cache.cc  wrapper.cc
